--- a/frontend/lembretes/package.json
+++ b/frontend/lembretes/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
     "jwt-decode": "^4.0.0",
+    "lucide-angular": "^0.574.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
